BugFix Wipe Screen + Controls + Load/Save working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutterdoom
-description: "A new Flutter project."
+description: "Vanilla Doom ported to Flutter"
 publish_to: 'none'
 version: 0.1.0
 
