--- a/android/app/CMakeLists.txt
+++ b/android/app/CMakeLists.txt
@@ -70,14 +70,33 @@ set(SOURCES
 
 add_library(doom SHARED ${SOURCES})
 
-target_compile_options(doom PRIVATE
-    -g -Wall -DNORMALUNIX -DLINUX
-	-Wno-unused-const-variable
-)
+if(WIN32)
+	set_target_properties(doom PROPERTIES C_STANDARD 11)
 
-target_link_libraries(doom PRIVATE
-	m
-)
+	target_compile_options(doom PRIVATE
+		/Zi /W4
+	)
+
+	target_compile_definitions(doom PRIVATE 
+		DART_SHARED_LIB
+		_CRT_SECURE_NO_WARNINGS
+		_WINSOCK_DEPRECATED_NO_WARNINGS
+		_AMD64_
+	)
+
+	target_link_libraries(doom PRIVATE 
+		ws2_32
+	)
+else()
+	target_compile_options(doom PRIVATE
+		-g -Wall -DNORMALUNIX -DLINUX
+		-Wno-unused-const-variable
+	)
+
+	target_link_libraries(doom PRIVATE
+		m
+	)
+endif()
 
 if(ANDROID)
 	target_link_libraries(doom PRIVATE
