--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -38,3 +38,15 @@ target_include_directories(${BINARY_NAME} PRIVATE "${CMAKE_SOURCE_DIR}")
 
 # Run the Flutter tool portions of the build. This must not be removed.
 add_dependencies(${BINARY_NAME} flutter_assemble)
+
+# Doom library
+add_subdirectory(
+  "../../android/app"
+  "libdoom"
+)
+
+add_custom_command(TARGET ${BINARY_NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+  "${CMAKE_BINARY_DIR}/runner/libdoom/$<CONFIG>/doom.dll"
+  "$<TARGET_FILE_DIR:${BINARY_NAME}>/doom.dll"
+)
